--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "frontend",
+  "name": "rednx-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.3.6",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.10",
+    "@reach/router": "^1.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.0",
+    "i18next": "^19.4.5",
+    "i18next-http-backend": "^1.0.15",
+    "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
+    "popper.js": "^1.14.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-scripts": "3.4.1"
+    "react-i18next": "^11.5.0",
+    "react-scripts": "3.4.1",
+    "rxjs": "^6.5.5",
+    "typescript": "^3.9.3",
+    "undux": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/reach__router": "^1.3.5"
   }
 }
