--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "popper.js": "^1.14.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fade-in": "^1.1.0",
     "react-i18next": "^11.5.0",
     "react-scripts": "3.4.1",
     "rxjs": "^6.5.5",
