--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/react-fade-in": "^0.1.0",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "i18next": "^19.4.5",
     "i18next-http-backend": "^1.0.15",
