--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "rednx-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://tryhosting.com.br",
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.10",
+    "@hcaptcha/react-hcaptcha": "^0.1.9",
     "@reach/router": "^1.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/hcaptcha__react-hcaptcha": "^0.1.1",
     "@types/react-fade-in": "^0.1.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
