--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/bootstrap": "^4.5.0",
     "@types/hcaptcha__react-hcaptcha": "^0.1.1",
+    "@types/react-avatar-editor": "^10.3.5",
     "@types/react-fade-in": "^0.1.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
@@ -25,6 +27,7 @@
     "node-sass": "^4.14.1",
     "popper.js": "^1.14.3",
     "react": "^16.13.1",
+    "react-avatar-editor": "^11.0.9",
     "react-dom": "^16.13.1",
     "react-fade-in": "^1.1.0",
     "react-i18next": "^11.5.0",
@@ -55,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.3.38",
     "@types/reach__router": "^1.3.5"
   }
 }
