--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/bootstrap": "^4.5.0",
     "@types/hcaptcha__react-hcaptcha": "^0.1.1",
     "@types/react-avatar-editor": "^10.3.5",
+    "@types/react-datepicker": "^2.11.1",
     "@types/react-fade-in": "^0.1.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
@@ -28,6 +29,7 @@
     "popper.js": "^1.14.3",
     "react": "^16.13.1",
     "react-avatar-editor": "^11.0.9",
+    "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-fade-in": "^1.1.0",
     "react-i18next": "^11.5.0",
