Add apis, watch page, watch components...

--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "@types/react-fade-in": "^0.1.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "dashjs": "^3.1.1",
+    "hls.js": "^0.13.2",
     "i18next": "^19.4.5",
     "i18next-http-backend": "^1.0.15",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
+    "plyr": "^3.6.2",
     "popper.js": "^1.14.3",
     "react": "^16.13.1",
+    "react-autosize-textarea": "^7.0.0",
     "react-avatar-editor": "^11.0.9",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
